scale score graph spacing style fixes

--- a/src/less/rdw.less
+++ b/src/less/rdw.less
@@ -18,7 +18,7 @@
     justify-content: center;
     flex-wrap: wrap;
     padding-top: 50px;
-    padding-bottom: 63px;
+    padding-bottom: 68px;
     .score {
       position: absolute;
       top: 12px;
@@ -129,14 +129,14 @@
         white-space: nowrap;
       }
       .bar-data {
-        bottom: -50px;
+        bottom: -60px;
         font-size: @font-size-h1;
         font-weight: 700;
         font-family: @font-family-sans-serif;
         &:before {
           content: '';
           position: absolute;
-          top: -14px;
+          top: -6px;
           left: 50%;
           margin-left: -8.25px;
           display: block;
@@ -151,7 +151,7 @@
         }
       }
       .bar-label {
-        bottom: -63px;
+        bottom: -68px;
         color: @gray-darker;
         font-size: @font-size-small;
       }
